# esp-idf-linker-wrapper

./: Cargo.toml  README.md
src/: lib.rs  linker_that_configures_cmake.rs  main.rs
