[package]
name = "esp-idf-linker-wrapper"
version = "0.1.0"
authors = ["Yonas Jongkind <Yonas.Jongkind@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2"
ex = "^0"
bindgen = "^0"
simple_logger = "^1"
regex = "1"